--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,38 @@
 	margin-left: 60px;
 	margin-bottom: 50px;
 }
+
+/* footer section */
+
+.footer {
+	margin-top: 130px;
+	background-color: #151414;
+	color: #fff;
+}
+.footer-content {
+	padding: 100px 200px;
+	display: flex;
+	gap: 330px;
+}
+.future-title h2 {
+	font-weight: 700;
+	font-size: 45px;
+	padding: 16px 0;
+}
+.future-description p {
+	padding: 14px 0;
+}
+
+.subscribe h3 {
+	font-weight: 600;
+	font-size: 25px;
+	padding: 10px 0;
+}
+input[type='email'] {
+	padding: 10px;
+	border-radius: 5px;
+	border: 1px solid #fff;
+	background-color: #000;
+	color: #fff;
+	font-weight: 600;
+}
